--- a/media_project1.css
+++ b/media_project1.css
@@ -90,6 +90,11 @@ header .icon {
 }
 
 
+header .mobile {
+  display: none;
+}
+
+
 
 @media only screen and (max-width: 895px) {
   nav li:last-child {
@@ -101,10 +106,31 @@ header .icon {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   header .desktop {
     display: none;
   }
+
+  header .mobile {
+    display: block;
+    width: 100%;
+  }
+
+  header .content {
+    padding: .5rem 0;
+  }
+
+  header .mobile ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+  }
+
+  header .mobile li {
+    padding: 0;
+  }
+ 
 
 }
 
