--- a/about.css
+++ b/about.css
@@ -1,91 +1,107 @@
-html {
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-  }
-  
-  
-
-  
 /*-------------------------------------------------*/
 header {
-    position: fixed;
-    z-index: 100;
-    width: 100%;
-    top:0;
-    border-bottom: solid 1px #c6c1c1;
-    background-color: white;
-    
-  }
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  top:0;
+  border-bottom: solid 1px #c6c1c1;
+  background-color: white;
   
-  header .content {
-    display: flex;
-    align-items: center;
-    padding: 0.875rem;
-    
-  }
+}
+
+header .content {
+  display: flex;
+  align-items: center;
+  padding: 0.875rem;
   
-  header .logo {
-    flex: 1;
-    
-    
-  }
+}
+
+header .logo {
+  flex: 1;
   
-  header nav ul {
-    display: flex;
-    list-style-type:none;
-    
-  }
   
-  nav li {
-    padding-left: 3.5rem;
-    
-  }
+}
+
+header nav ul {
+  display: flex;
+  list-style-type:none;
   
-  nav a {
-    vertical-align: bottom;
-    line-height: 1.6;
-    font-size: 1rem;
-    color: #4a4a4a;
-    text-decoration: none;
-    
-  }
+}
+
+nav li {
+  padding-left: 3.5rem;
   
-  nav .button {
-    padding: .1875rem .5rem;
-    background-color: #9dc20b;
-    line-height: 1.6;
-    color: white;
-    
-  }
+}
+
+nav a {
+  vertical-align: bottom;
+  line-height: 1.6;
+  font-size: 1rem;
+  color: #4a4a4a;
+  text-decoration: none;
   
+}
+
+nav .button {
+  padding: .1875rem .5rem;
+  background-color: #9dc20b;
+  line-height: 1.6;
+  color: white;
+  
+}
+
+nav li:last-child {
+  display: none;
+  text-decoration: none;
+}
+
+header .icon {
+  width: 1rem;
+  padding-left: .75rem;
+}
+
+
+header .mobile {
+  display: none;
+}
+
+
+
+@media only screen and (max-width: 895px) {
   nav li:last-child {
+    display: block;
+  }
+
+  header .content {
+    padding: 1rem 1rem;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  header .desktop {
     display: none;
-    text-decoration: none;
   }
-  
-  header .icon {
-    width: 1rem;
-    padding-left: .75rem;
+
+  header .mobile {
+    display: block;
+    width: 100%;
   }
-  
-  
-  
-  @media only screen and (max-width: 895px) {
-    nav li:last-child {
-      display: block;
-    }
-  
-    header .content {
-      padding: 1rem 1rem;
-    }
+
+  header .content {
+    padding: .5rem 0;
   }
-  
-  @media only screen and (max-width: 600px) {
-    header .desktop {
-      display: none;
-    }
-  
+
+  header .mobile ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
   }
-  
-  
-  
+
+  header .mobile li {
+    padding: 0;
+  }
+ 
+
+}
+
