--- a/about.css
+++ b/about.css
@@ -1,3 +1,10 @@
+html {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+}
+
+
+
 /*-------------------------------------------------*/
 header {
   position: fixed;
@@ -58,6 +65,7 @@ nav li:last-child {
 header .icon {
   width: 1rem;
   padding-left: .75rem;
+
 }
 
 
@@ -104,4 +112,374 @@ header .mobile {
  
 
 }
+
+
+
+
+li .one:hover{
+  border-style: inset;
+  border-left: hidden;
+  border-right: hidden;
+  border-top: 5px solid black;
+  border-bottom: hidden;
+ 
+
+  transition: 0.2s ease-in-out;
+}
+
+li .two:hover{
+  border-style: inset;
+  border-left: hidden;
+  border-right: hidden;
+  border-top: 5px solid black;
+  border-bottom: hidden;
+  transition: 0.2s ease-in-out;
+}
+
+
+
+
+li .three:hover{
+  background: -webkit-linear-gradient(purple, red);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  
+}
+
+/*
+.item1 { grid-area: sec1; }
+.item2 { grid-area: sec2; }
+
+display: grid;
+  grid-template-areas:' sec1 sec1 sec2 sec2';
+  gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+*/
+
+
+/*------main-content--------------*/
+
+.main-content{
+
+  margin-top: 7%;
+  margin-left: 5%;
+  margin-right: 5%;
+  border: 2px solid rgb(246, 246, 246);
+}
+
+.p1{
+  
+
+  border: 5px solid black;
+  display: flex;
+
+  padding: 4px 4px;
+  
+}
+
+
+
+#pic1 img{
+  
+  
+  /*object-fit: cover;*/
+  width: 100%;
+  height: 100%;
+
+
+}
+
+
+
+
+
+/*------------------css shapes(squair,s)------------------------*/
+.section{
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap:40px;
+
+  
+ /*for css shapes*/
+  background-color: aliceblue;
+  position:relative;
+  margin-top: 7%;
+  z-index: 6;
+
+  
+  
+}
+
+
+
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 887px) {
+  .section  {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-top: 20%;
+  }
+
+  
+    
+}
+
+
+
+
+
+
+.square {
+  position: absolute;
+  height: 240px;
+  width: 300px;
+  border: 10px solid black;
+  z-index: 2;
+  margin-left: 5%;
+  rotate: 45deg;
+  
+}
+
+.square1{
+  position: absolute;
+  height: 240px;
+  width: 300px;
+  border: 10px solid black;
+  z-index: 2;
+  margin-left: 10%;
+  rotate: 45deg;
+  
+}
+
+.square2 {
+  position: absolute;
+  height: 240px;
+  width: 300px;
+  border: 10px solid black;
+  z-index: 2;
+  margin-left: 15%;
+  rotate: 45deg;
+  
+}
+
+.square3 {
+  position: absolute;
+  height: 240px;
+  width: 300px;
+  border: 10px solid black;
+  z-index: 2;
+  margin-left: 20%;
+  rotate: 45deg;
+  
+}
+
+
+.square4 {
+  position: absolute;
+  height: 240px;
+  width: 300px;
+  border: 10px solid black;
+  z-index: 2;
+  margin-left: 25%;
+  rotate: 45deg;
+  
+}
+
+
+
+
+
+.square5{
+  position: absolute;
+  height: 140px;
+  width: 200px;
+  border: 10px solid rgb(247, 69, 69);
+  z-index: 2;
+  margin-left: 70%;
+  margin-top: -120px;
+  rotate: 315deg;
+  border-right: none;
+ 
+  
+}
+
+
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 887px) {
+  
+.square,
+.square1,
+.square2,
+.square3,
+.square4,
+.square5{
+    display: none !important;
+  }
+    
+}
+
+
+/*------------pic content----------------------*/
+#pic1_content h1{
+  font-family: 'DM Sans', sans-serif;
+    font-size: 2.8rem;
+    line-height: 1.3;
+    
+}
+
+
+#pic1_content h2{
+  font-family: 'DM Sans', sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.4;}
+
+
+#pic1_content p{
+  font-family: 'DM Sans', sans-serif;
+    font-size: 1rem;
+}
+
+/*-----------------------------------------*/
+/*
+.p3{
+  background-color: green;
+}
+.p4{
+  background-color: orange;
+}
+.p5{
+  background-color: gold;
+}*/
+
+
+/*-------------------------------------*/
+
+#down{
+  box-sizing: border-box;
+  margin: 0;
+  
+}
+.port{
+  text-align: center;
+  padding: 32px;
+  position: relative;
+
+}
+.port{
+ 
+}
+
+.row {
+  
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 8px;
+  height: 100%;
+  width: auto;
+  padding-left: 130px;
+  padding-right: 130px;
+  
+}
+
+.column img {
+  
+  vertical-align: middle;
+  width: 100%;
+}
+
+
+.wwth{
+  height: 300px;
+  width: auto;
+}
+
+
+
+@media only screen and (max-width: 895px)  {
+  .column {
+  
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 8px;
+    height: 100%;
+    width: auto;
+    padding-left: 50px;
+    padding-right: 50px;
+    
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .column {
+  
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    
+  }
+  .wwth{
+    height: 300px;
+    
+    border: 5px solid black;
+  }
+}
+
+
+
+/*----------------footer----------------*/
+
+
+/* Footer */
+
+footer {
+  background-color: #9b9b9b;
+  padding: 1.5rem 2rem;
+  margin-top: 50px;
+}
+
+
+
+footer .copyright {
+  flex-grow: 1;
+}
+
+@media only screen and (max-width: 600px) {
+  footer .content {
+    font-size: .625rem;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
