--- a/media_project1.css
+++ b/media_project1.css
@@ -1,6 +1,6 @@
 html {
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 
@@ -19,11 +19,26 @@ html {
 
 .image-container {
   overflow: hidden;
+
+  height: 300px; /* [1.1] Set it as per your need */
+  overflow: hidden; 
+
+  
 }
 
 .image-container img {
   display: block;
   max-width: 100%;
+ 
+}
+
+
+.image-container:hover img{
+
+  cursor: pointer;
+  transition: transform .5s ease-in-out;
+  transform: scale(1.5); 
+  
 }
 
 
@@ -87,6 +102,7 @@ nav li:last-child {
 header .icon {
   width: 1rem;
   padding-left: .75rem;
+
 }
 
 
@@ -134,6 +150,40 @@ header .mobile {
 
 }
 
+
+
+
+li .one:hover{
+  border-style: inset;
+  border-left: hidden;
+  border-right: hidden;
+  border-top: 5px solid black;
+  border-bottom: hidden;
+ 
+
+  transition: 0.2s ease-in-out;
+}
+
+li .two:hover{
+  border-style: inset;
+  border-left: hidden;
+  border-right: hidden;
+  border-top: 5px solid black;
+  border-bottom: hidden;
+
+
+  transition: 0.2s ease-in-out;
+}
+
+
+
+
+li .three:hover{
+  background: -webkit-linear-gradient(purple, red);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  
+}
 
 
 
@@ -278,6 +328,8 @@ header .mobile {
   width: 90%;
   height: 65%;
   margin: 0 auto;
+  
+  
 }
 
 .feature .content {
@@ -377,16 +429,24 @@ header .mobile {
 #filters-section .images-container {
   display: inline-flex;
   max-width: 100%;
+  max-height: 90%;
   padding: 0 1%;
 }
 
+#filters-section .images-container{ 
+
+
+ height: 190px;
+ overflow-y: hidden;
+
+}
 
 
 
 
 @media only screen and (max-width: 600px) {
   #filters-section {
-    padding: 1.5rem 0 0 0;
+    padding: 1rem 0 0 0;
   }
 
   #filters-section .content {
@@ -407,6 +467,7 @@ header .mobile {
 
   #filters-section .images-container {
     padding: 0;
+   
   }
 
   
